<resources>
    <string name="app_name">joWal</string>
    <string name="title_activity_home">Home</string>
    <string name="title_setting">Setting</string>
    <string name="title_wallet">Wallet</string>
    <string name="title_scan">Scan</string>
    <string name="card_number">Card number</string>
    <string name="name_on_card">Name on card</string>
    <string name="expire_date">Expire date</string>
    <string name="card_id">Card ID</string>
    <string name="shiba_number">Shiba number</string>
    <string name="update_card">Update card</string>
    <string name="cancel">cancel</string>
    <string name="add_card">Add New Card</string>
    <string name="bank_logo">bankLogo</string>
    <string name="mycard">My Cards</string>
    <string name="share_image">Share as image</string>
    <string name="share_text">share as text</string>
    <string name="card_info">This is my card deatils</string>
</resources>