<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.aj.jowal.ui.UpdateCardViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.wallet.WalletFragment">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_back_menu" >
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:backgroundTint="@android:color/transparent"
                android:src="@drawable/ic_delete"
                android:onClick="@{viewModel::alertForDelete}"/>
        </com.google.android.material.appbar.MaterialToolbar>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:cardBackgroundColor="@color/black"
            app:cardCornerRadius="@dimen/activity_horizontal_margin">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <ImageView
                android:id="@+id/bk"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_height="match_parent"
                android:alpha="0.08"
                android:contentDescription="@string/bank_logo"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="@dimen/double_activity_vertical_margin"
                android:paddingTop="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/double_activity_vertical_margin"
                android:paddingBottom="@dimen/activity_horizontal_margin">

                <!--//TODO: YOU MAY SHOULD TEST   android:src="@{card.bankLogo}"-->
                <ImageView
                    android:id="@+id/bank_image"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:contentDescription="@string/bank_logo"
                    android:src="@drawable/none" />

                <TextView
                    android:id="@+id/card_number_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="@{viewModel.cardNumber}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.cardId}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/white" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:alpha="0.2"
                    android:text="@{viewModel.shebaNumber}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:orientation="horizontal">

                    <TextView
                        android:fontFamily="@font/iransans"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.cardName}"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@color/white" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1"/>

                    <TextView
                        android:id="@+id/expire_date_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.expireDate}"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@color/white" />

                </LinearLayout>
            </LinearLayout>
            </FrameLayout>
        </androidx.cardview.widget.CardView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/card_number"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:hint="@string/card_number">

                    <EditText
                        android:id="@+id/card_number_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="16"
                        android:imeOptions="actionNext"
                        android:text="@={viewModel.cardNumber}"
                        android:inputType="number"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/name_on_card"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:hint="@string/name_on_card">

                    <EditText
                        android:id="@+id/name_on_card_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.cardName}"
                        android:imeOptions="actionNext"
                        android:inputType="textNoSuggestions"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/expire_date"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:hint="@string/expire_date">

                    <EditText
                        android:id="@+id/expire_date_edittext"
                        android:text="@={viewModel.expireDate}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="4"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/card_id"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:hint="@string/card_id">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/card_id_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.cardId}"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/shiba_number"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:hint="@string/shiba_number">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/shiba_number_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:text="@={viewModel.shebaNumber}"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <Button
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_horizontal_margin"
                        android:background="@android:color/transparent"
                        android:text="@string/update_card"
                        android:onClick="@{()-> viewModel.update}"
                        android:textColor="?attr/colorOnSecondary" />

                    <Button
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_horizontal_margin"
                        android:background="@android:color/transparent"
                        android:text="@string/cancel"
                        android:alpha=".7"
                        android:textColor="?attr/colorOnSecondary" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>
